--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ramda": "^0.25.0",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-datepicker": "^1.7.2",
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.18.2",
     "react-redux": "^5.1.0",
@@ -26,6 +27,7 @@
     "@types/ramda": "^0.26.0",
     "@types/react": "^16.4.18",
     "@types/react-native": "^0.57.7",
+    "@types/react-native-datepicker": "^1.6.6",
     "@types/react-native-vector-icons": "^4.6.4",
     "@types/react-navigation": "^2.13.0",
     "@types/react-redux": "^6.0.9",
