--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-navigation": "^2.18.2",
     "react-redux": "^5.1.0",
     "redux": "^4.0.1",
+    "redux-observable": "^1.0.0",
     "redux-offline": "^2.0.0",
+    "rxjs": "^6.3.3",
     "typesafe-actions": "^2.0.4"
   },
   "devDependencies": {
