--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux": "^4.0.1",
     "redux-observable": "^1.0.0",
     "redux-offline": "^2.0.0",
+    "reselect": "^4.0.0",
     "rxjs": "^6.3.3",
     "typesafe-actions": "^2.0.4"
   },
